@@ -1,4 +1,9 @@
 ---
+* [Bug 3527] fudgeval2 anomaly in mode7 clock info packet <perlinger@ntp.org>
+  - Found by Gerry Garvey. Can't be fixed without causing serious interop
+    issues. Left a comment to fix this in protocol version 5.
+
+---
 (4.2.8p12) 2018/08/14 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Sec 3505] CVE-2018-12327 - Arbitrary Code Execution Vulnerability
